# GA_conn4

./: CMakeLists.txt
include/: board.h  conn4model.h  population.h
src/: board.cpp  conn4model.cpp  main.cpp  population.cpp
